--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,11 @@ logging:
     org.springframework: debug
 
 spring:
-  mvc:
-    pathmatch:
-      matching-strategy: ant_path_matcher
   messages:
     basename: messages
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
